NOT WORKING WITH NEXTCLOUD: feat(rclone): add rclone role for cloud storage mounts
This change introduces a new Ansible role to provision and manage rclone cloud storage mounts. It allows users to define various cloud remotes and their mount points, which are then deployed as Docker containers.

- Create new `rclone` Ansible role with `defaults/main.yml`, `tasks/main.yml`, and `templates/rclone.conf.j2`.
- Add `rclone_enabled` and `rclone_mounts` variables to `group_vars/all.yml` and `inventories/sample/group_vars/sample.yml` for configuration.
- Include the `rclone` role in `provisioning.yml` to enable its deployment.
- Configure `rclone` Docker containers to mount specified cloud remotes to local directories.

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -113,3 +113,17 @@ gitea_admin_password: "change_this"
 watchtower_enabled: true
 watchtower_subdomain: "watchtower"
 watchtower_http_api_token: change_this
+
+rclone_enabled: true
+rclone_mounts:
+  - name: iCloud
+    enabled: true
+    remote_path: "iCloud:"
+    mount_dir: "iCloud"
+    type: iclouddrive
+    apple_id: "farazeus@gmail.com"
+    password: "your-app-specific-password"
+    cookies: "your-cookies-from-rclone-config"
+    trust_token: "your-trust-token-from-rclone-config"
+
+rclone_cloud_directory: "/home/{{ admin_username }}/Cloud"
