chore(mus): add apparmor unconfined security option
This change configures the `mus` container to run with `apparmor:unconfined` security. This is necessary to prevent potential permission issues that could arise from restricted access to system resources, ensuring the container operates as expected.

- Set `security_opts` to `["apparmor:unconfined"]` in the `mus` container definition within `roles/mus/tasks/main.yml`.

--- a/roles/mus/tasks/main.yml
+++ b/roles/mus/tasks/main.yml
@@ -37,6 +37,7 @@
     env:
       SECRET_KEY: "{{ mus_auth_route }}"
     restart_policy: unless-stopped
+    security_opts: ["apparmor:unconfined"]
     memory: "{{ mus_memory }}"
     labels:
       traefik.enable: "{{ mus_available_externally }}"
