feat(obsidian-livesync): add Obsidian LiveSync CouchDB application
This commit introduces the Obsidian LiveSync application, providing a self-hosted CouchDB instance for the Obsidian LiveSync plugin. A new Ansible role handles its deployment and configuration.

- Added `obsidian_livesync` Ansible role for CouchDB container deployment and database initialization.
- Defined `obsidian_livesync` default variables in `roles/obsidian_livesync/defaults/main.yml`.
- Included `obsidian_livesync` role in `provisioning.yml` playbook.
- Configured `obsidian_livesync` variables in `group_vars/all.yml` and `inventories/sample/group_vars/sample.yml`.
- Updated `README.md` with Obsidian LiveSync application entry.

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -113,3 +113,9 @@ gitea_admin_password: "change_this"
 watchtower_enabled: true
 watchtower_subdomain: "watchtower"
 watchtower_http_api_token: change_this
+
+obsidian_livesync_enabled: true
+obsidian_livesync_subdomain: "couchdbobsidian"
+obsidian_livesync_couchdb_user: "obsidian_user"
+obsidian_livesync_couchdb_password: "change_this"
+obsidian_livesync_couchdb_database: "obsidian"
