feat(server): add 3x-ui and system maintenance tasks
Introduces the 3x-ui application for managing VLESS and other proxy protocols, and automates system maintenance tasks like cache cleaning and log rotation.

- Adds a new `threexui` role for deploying the 3x-ui Docker container.
- Configures Traefik to route traffic to both the 3x-ui admin panel and its VLESS endpoint.
- Implements cron jobs for weekly apt and docker cache cleanup.
- Configures systemd-journald to limit log size to 100MB and retention to 1 month.
- Creates a "dumbfile" in `/var/dumb` to occupy 20% of free space, with helper functions for creation and removal.
- Updates README.md to include 3x-ui in the applications list and reflect changes in optional in-before steps.
- Modifies `provisioning.yml` to include the `threexui` role.
- Adds `cron` to `mayurifag_general_extra_packages` in `roles/server_general_preparations/defaults/main.yml`.
- Updates `roles/users/tasks/main.yml` to configure SSH daemon settings via `sshd_config.d`.
- Replaces `netstat` with `ss` for the `ports` alias in `.bashrc`.
- Adds `createdumb` and `removedumb` functions to `.bashrc` for managing the dumbfile.
- Updates `roles/traefik/tasks/main.yml` to comment out the `nextcloud-aio` network.
- Refactors `sshd_config.j2` to use `/etc/ssh/sshd_config.d/10-ansible.conf` and simplifies SSH configurations.
- Adds `StrictHostKeyChecking ask` and `UpdateHostKeys ask` to the SSH config.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -78,6 +78,11 @@
         - shadowsocks
       when: (shadowsocks_enabled | default(False))
 
+    - role: threexui
+      tags:
+        - threexui
+      when: (threexui_enabled | default(False))
+
     # TODO: for ubuntu have to disable systemd-resolved service, occupies 53 port
     # TODO: for ubuntu - change resolv.conf
     - role: blocky
