--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -54,4 +54,4 @@
       traefik.http.routers.traefik.entrypoints: "web,websecure"
     networks:
       - name: "bridge"
-      - name: "nextcloud-aio"
+      # - name: "nextcloud-aio"
