--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -57,12 +57,20 @@
     group: root
     mode: "0644"
 
-- name: Configure SSH daemon
-  ansible.builtin.template:
-    src: "templates/sshd_config.j2"
-    dest: "/etc/ssh/sshd_config"
+- name: Ensure sshd_config.d directory exists
+  ansible.builtin.file:
+    path: /etc/ssh/sshd_config.d
+    state: directory
     owner: root
     group: root
-    mode: "0600"
+    mode: "0755"
+
+- name: Configure SSH daemon settings in .d
+  ansible.builtin.template:
+    src: "templates/sshd_config.j2"
+    dest: "/etc/ssh/sshd_config.d/10-ansible.conf"
+    owner: root
+    group: root
+    mode: "0644"
     validate: "/usr/sbin/sshd -t -f %s"
   notify: Restart sshd
