refactor(server): improve apt package management
This commit refactors the server preparation tasks to enhance package management by enabling unattended upgrades and optimizing APT configurations.

- Added `unattended-upgrades` to `mayurifag_general_extra_packages`.
- Replaced separate files for disabling recommended and suggested packages with a single `51ansible-setup` file.
- Configured APT to automatically update package lists, download upgrades, and perform unattended upgrades.
- Enabled automatic reboots for unattended upgrades and configured them to occur at 04:00.
- Enabled removal of unused kernel and dependency packages during unattended upgrades.
- Ensured the `unattended-upgrades` service is enabled and started.
- Removed the weekly cron job for apt cleanup, as this is now handled by unattended upgrades.
- Updated README.md with more concise VPS and Mac/PC setup instructions.
- Moved the finance app task to a more appropriate section in the README.md.

--- a/roles/server_general_preparations/defaults/main.yml
+++ b/roles/server_general_preparations/defaults/main.yml
@@ -70,6 +70,7 @@ mayurifag_general_extra_packages:
   - nethogs
   - ntp
   - software-properties-common
+  - unattended-upgrades
   - unzip
   - wget
   - whois
