refactor(provisioning): streamline ansible roles and configurations
This commit reorganizes Ansible roles, updates dependencies, and refines configurations for improved maintainability and clarity.

- Removed unused Ansible roles from .gitignore.
- Updated README to include setup instructions for inventory.
- Reordered roles in provisioning.yml for better logical flow.
- Updated versions of several Ansible roles in requirements.yml.
- Moved CouchDB database creation and pause logic to handlers in obsidian_livesync role.
- Added `sysctl_values_absent` to server_general_preparations defaults to remove deprecated sysctl values.
- Added a handler to restart systemd-journald in server_general_preparations.
- Ensured `set -o pipefail` is used in the create dumbfile shell command.
- Corrected a typo in the .bashrc template for the createdumb function.

--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,10 @@ Session.vim
 # IntelliJ
 /.idea/
 
-roles/geerlingguy.*
-roles/robertdebock.*
-roles/darkwizard242.*
-roles/djx339.*
-inventories/my-provision
+/inventories/my-provision
 
 secret
 
 /makefiles/private.mk
+
+/.ansible/roles
