--- a/roles/server_general_preparations/defaults/main.yml
+++ b/roles/server_general_preparations/defaults/main.yml
@@ -1,4 +1,7 @@
 ---
+sysctl_values_absent:
+  - net.ipv4.tcp_tw_recycle
+
 sysctl_values:
   # For security reasons, Red Hat Enterprise Linux disables the 'SysRq' key by default
   # https://sites.google.com/site/syscookbook/rhel/rhel-sysrq-key
@@ -21,10 +24,12 @@ sysctl_values:
   - { key: net.ipv4.conf.all.accept_redirects, value: 0 }
   - { key: net.ipv6.conf.all.accept_redirects, value: 0 }
   - { key: net.ipv4.conf.default.accept_redirects, value: 0 }
+  - { key: net.ipv6.conf.default.accept_redirects, value: 0 }
   - { key: net.ipv4.conf.all.send_redirects, value: 0 }
   - { key: net.ipv4.conf.default.send_redirects, value: 0 }
   - { key: net.ipv4.conf.default.secure_redirects, value: 0 }
-  - { key: net.ipv6.conf.all.secure_redirects, value: 0 }
+  - { key: net.ipv4.route.flush, value: 1 }
+  - { key: net.ipv6.route.flush, value: 1 }
 
   # https://tldp.org/HOWTO/Adv-Routing-HOWTO/lartc.kernel.rpf.html
   - { key: net.ipv4.conf.all.log_martians, value: 1 }
