feat(roles): update traefik and netdata configurations
Updated Traefik to version 3.6.2 and Netdata to use the stable tag, improving stability and security. Also, adjusted configurations for Blocky and Threexui.

- Updated traefik_docker_image in roles/traefik/defaults/main.yml to `traefik:v3.6.2`.
- Changed netdata container image in roles/netdata/tasks/main.yml to `netdata/netdata:stable` and set `recreate: true`.
- Ensured PGID is a string in netdata container configuration.
- Added Blocky configuration to disable systemd-resolved stub listener.
- Modified Threexui router entrypoints to `websecure` and updated middleware to `secure-headers@file`.
- Removed `security_enabled` variable from inventories/sample/group_vars/sample.yml.
- Included `letsencrypt` directory in the list of directories to be removed in roles/traefik/tasks/main.yml.

--- a/roles/blocky/tasks/main.yml
+++ b/roles/blocky/tasks/main.yml
@@ -1,4 +1,32 @@
 ---
+- name: Check if systemd-resolved config exists
+  ansible.builtin.stat:
+    path: /etc/systemd/resolved.conf
+  register: resolved_conf
+
+- name: Ensure /etc/systemd/resolved.conf.d directory exists
+  ansible.builtin.file:
+    path: /etc/systemd/resolved.conf.d
+    state: directory
+    mode: "0755"
+  when: resolved_conf.stat.exists
+
+- name: Configure systemd-resolved to disable stub listener
+  ansible.builtin.copy:
+    dest: /etc/systemd/resolved.conf.d/no-stub.conf
+    content: |
+      [Resolve]
+      DNSStubListener=no
+    mode: "0644"
+  when: resolved_conf.stat.exists
+  register: resolved_stub_config
+
+- name: Restart systemd-resolved immediately
+  ansible.builtin.service:
+    name: systemd-resolved
+    state: restarted
+  # when: resolved_conf.stat.exists and resolved_stub_config.changed
+
 - name: Delete Blocky directory
   ansible.builtin.file:
     path: "{{ blocky_data_directory }}"
