feat(auth): integrate tinyauth for service authentication
This commit introduces the tinyauth service for centralized authentication across various applications. It replaces basic authentication mechanisms and configures Traefik to use tinyauth as a forward authentication middleware.

- Adds the `tinyauth` role with its default configuration and tasks.
- Configures `provisioning.yml` to include the `tinyauth` role when enabled.
- Updates `roles/netdata/tasks/main.yml` to use `tinyauth@docker` middleware for Netdata.
- Updates `roles/threexui/tasks/main.yml` to remove unnecessary entrypoints for Traefik routers.
- Updates `roles/traefik/tasks/main.yml` to use `tinyauth@docker` middleware for the Traefik API.
- Removes the `base_auth.toml.j2` template from `roles/traefik/templates/dynamic_configs`.
- Removes `admin_uid` and `admin_gid` from `inventories/sample/group_vars/sample.yml`.
- Removes commented-out htpasswd credentials from `inventories/sample/group_vars/sample.yml`.
- Adds `tinyauth_enabled`, `tinyauth_subdomain`, and `tinyauth_users` variables to `inventories/sample/group_vars/sample.yml`.
- Removes unused blocklist URLs from `roles/blocky/templates/config.yaml.j2`.
- Updates `roles/hemmelig/tasks/main.yml` to remove explicit owner and group settings for directories.
- Updates `roles/traefik/tasks/main.yml` to comment out the removal of the `letsencrypt` directory.
- Updates `roles/traefik/templates/traefik.toml.j2` to enable Docker provider watching.
- Updates `roles/users/templates/.bashrc` to reorder aliases and adjust prompt color logic.
- Refactors `createdumb` and `removedumb` functions in `roles/users/templates/.bashrc` for clarity and consistency.

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -5,8 +5,6 @@
 admin_username: change_this
 admin_userpassword: change_this
 admin_email: change_this@gmail.com
-admin_uid: 1000
-admin_gid: 1001
 
 root_userpassword: change_this
 
@@ -17,10 +15,6 @@ server_timezone: Etc/UTC
 server_hostname: mayurifag.local
 swap_file_size_mb: "1024"
 swap_swappiness: "15"
-
-# htpasswd -nbB admin admin
-# admin:$2y$05$9GXnLumjrUFrG96d4ljNkewDXSYIAUeRjLTafcdazV6g3jRPmulJO
-base_auth_credentials: "admin:$2y$05$9GXnLumjrUFrG96d4ljNkewDXSYIAUeRjLTafcdazV6g3jRPmulJO"
 
 traefik_dns_provider: cloudflare
 traefik_environment_variables:
@@ -103,3 +97,8 @@ obsidian_livesync_subdomain: "couchdbobsidian"
 obsidian_livesync_couchdb_user: "obsidian_user"
 obsidian_livesync_couchdb_password: "change_this"
 obsidian_livesync_couchdb_database: "obsidian"
+
+tinyauth_enabled: true
+tinyauth_subdomain: "auth"
+# Default user: test / test
+tinyauth_users: "test:$$2a$$10$$EuSvtUG9rKOOiBdb8aHQUOyBvAseOhLQxnyIgYqK8td/ileY4iH9u"
