--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -35,4 +35,4 @@
       traefik.enable: "{{ netdata_available_externally }}"
       traefik.http.routers.netdata.rule: "Host(`{{ netdata_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.netdata.loadbalancer.server.port: "19999"
-      traefik.http.routers.netdata.middlewares: "auth@file,secure-headers@file"
+      traefik.http.routers.netdata.middlewares: "tinyauth@docker,secure-headers@file"
