--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -5,7 +5,7 @@
     state: absent
   with_items:
     - "{{ traefik_data_directory }}/dynamic_configs"
-    - "{{ traefik_data_directory }}/letsencrypt"
+    # - "{{ traefik_data_directory }}/letsencrypt"
 
 - name: Create Traefik Directories
   ansible.builtin.file:
@@ -50,8 +50,7 @@
       traefik.http.routers.traefik.rule: "Host(`{{ traefik_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.traefik.loadbalancer.server.port: "8080"
       traefik.http.routers.traefik.service: "api@internal"
-      traefik.http.routers.traefik.middlewares: "auth@file"
-      traefik.http.routers.traefik.entrypoints: "web,websecure"
+      traefik.http.routers.traefik.middlewares: "tinyauth@docker,secure-headers@file"
     networks:
       - name: "bridge"
       # - name: "nextcloud-aio"
