feat(blocky): update blocky configuration and tasks
Updated the Blocky DNS server configuration to enhance its performance and security, and adjusted related tasks for better management.

- Changed Blocky upstream DNS servers to a new set of providers.
- Updated Blocky to use `parallel_best` strategy for upstream DNS queries.
- Renamed `blackLists` to `denylists` and `whiteLists` to `allowlists` in Blocky configuration for clarity.
- Removed the exposure of port 53 in the Blocky Docker container to prevent DNS amplification attacks.
- Added `mosh` to the list of extra packages in `server_general_preparations` for improved remote shell capabilities.
- Added `blocky-ui` to the README's list of items to check.
- Updated Portainer configuration in README to include making a service and labels on all services.

--- a/roles/blocky/tasks/main.yml
+++ b/roles/blocky/tasks/main.yml
@@ -56,7 +56,7 @@
       TZ: "{{ server_timezone }}"
     restart_policy: unless-stopped
     ports:
-      - "53:53"
+      # - "53:53" # Do not expose 53 port, its open for DNS Amplification Attack
       - "853:853"
     labels:
       traefik.enable: "{{ blocky_available_externally }}"
