--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.file:
     path: "{{ nextcloud_files_directory }}"
     state: directory
-    mode: '0755'
+    mode: "0755"
 
 - name: Remove old Nextcloud data directory
   ansible.builtin.file:
@@ -41,5 +41,10 @@
       NEXTCLOUD_MEMORY_LIMIT: 1024M # Can be adjusted if you need more. See https://github.com/nextcloud/all-in-one#how-to-adjust-the-php-memory-limit-for-nextcloud
       SKIP_DOMAIN_VALIDATION: "true"
     restart_policy: unless-stopped
-    ports:
-      - "28888:8080"
+    # ports:
+    #   - "28888:8080"
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.ncaio.rule: "Host(`ncaio.{{ server_hostname }}`)"
+      traefik.http.services.ncaio.loadbalancer.server.port: "28888"
+      traefik.http.routers.ncaio.middlewares: "tinyauth@docker,secure-headers@file"
