refactor(server_general_preparations): organize tasks into separate files
Organized the server general preparations tasks into individual YAML files for better modularity and maintainability.

- Created new task files: timezone_locales.yml, sysctl.yml, packages.yml, maintenance.yml, dumbfile.yml, and reboot.yml.
- Refactored the main.yml to include tasks from these new files.
- Removed the direct task definitions from main.yml.
- Removed a dead link from README.md.

--- a/roles/server_general_preparations/tasks/main.yml
+++ b/roles/server_general_preparations/tasks/main.yml
@@ -1,148 +1,7 @@
 ---
-- name: "Set timezone to {{ server_timezone }}"
-  community.general.timezone:
-    name: "{{ server_timezone }}"
-
-- name: Remove deprecated sysctl values
-  ansible.posix.sysctl:
-    name: "{{ item }}"
-    state: absent
-    reload: yes
-  loop: "{{ sysctl_values_absent }}"
-
-- name: Apply custom sysctl values
-  ansible.posix.sysctl:
-    name: "{{ item.key }}"
-    value: "{{ item.value }}"
-    sysctl_set: yes
-    reload: yes
-    state: present
-  loop: "{{ sysctl_values }}"
-
-- name: Update apt-cache
-  ansible.builtin.apt:
-    update_cache: yes
-    cache_valid_time: 3600
-
-- name: Install extra packages
-  ansible.builtin.apt:
-    name: "{{ mayurifag_general_extra_packages }}"
-    state: present
-    force_apt_get: yes
-
-- name: Configure apt
-  ansible.builtin.copy:
-    dest: /etc/apt/apt.conf.d/51ansible-setup
-    content: |
-      APT::Install-Recommends "0";
-      APT::Install-Suggests "0";
-      APT::Periodic::Update-Package-Lists "1";
-      APT::Periodic::Download-Upgradeable-Packages "1";
-      APT::Periodic::Unattended-Upgrade "1";
-      APT::Periodic::AutocleanInterval "7";
-      Unattended-Upgrade::Automatic-Reboot "true";
-      Unattended-Upgrade::Automatic-Reboot-Time "04:00";
-      Unattended-Upgrade::Remove-Unused-Kernel-Packages "true";
-      Unattended-Upgrade::Remove-New-Unused-Dependencies "true";
-      Unattended-Upgrade::SyslogEnable "true";
-    mode: "0644"
-
-- name: Ensure unattended-upgrades service is enabled
-  ansible.builtin.systemd:
-    name: unattended-upgrades
-    enabled: yes
-    state: started
-
-- name: Upgrade all packages
-  ansible.builtin.apt:
-    upgrade: dist
-    state: latest
-    force_apt_get: yes
-
-- name: Remove orphaned packages and clean apt cache
-  ansible.builtin.apt:
-    autoremove: yes
-    autoclean: yes
-
-- name: Ensure the locale en_US.UTF-8 exists
-  community.general.locale_gen:
-    name: en_US.UTF-8
-    state: present
-
-- name: Ensure the locale ru_RU.UTF-8 exists
-  community.general.locale_gen:
-    name: ru_RU.UTF-8
-    state: present
-
-- name: Set en_US.UTF-8 as default locale
-  ansible.builtin.command: localectl set-locale LANG=en_US.UTF-8
-
-- name: Ensure NTP service is running and enabled
-  ansible.builtin.systemd:
-    name: ntp
-    state: started
-    enabled: yes
-
-- name: Ensure cron service is running and enabled
-  ansible.builtin.systemd:
-    name: cron
-    state: started
-    enabled: yes
-
-- name: Schedule weekly docker cleanup
-  ansible.builtin.cron:
-    name: "Weekly docker cleanup"
-    special_time: weekly
-    job: "docker system prune --all --force --volumes"
-
-- name: Create systemd-journald configuration directory
-  ansible.builtin.file:
-    path: /etc/systemd/journald.conf.d
-    state: directory
-    mode: "0755"
-
-- name: Configure systemd-journald max size
-  ansible.builtin.copy:
-    dest: /etc/systemd/journald.conf.d/00-journal-size.conf
-    content: |
-      [Journal]
-      SystemMaxUse=100M
-      MaxRetentionSec=1month
-    mode: "0644"
-  notify: Restart systemd-journald
-
-- name: Create dumbfile directory
-  ansible.builtin.file:
-    path: /var/dumb
-    state: directory
-    mode: "0777"
-
-- name: Check if dumbfile exists
-  ansible.builtin.stat:
-    path: /var/dumb/dumbfile
-  register: dumbfile_stat
-
-- name: Create dumbfile for 20% of free space
-  ansible.builtin.shell: |
-    set -o pipefail
-    avail=$(df --output=avail -k /var/dumb | tail -n 1)
-    size=$((avail * 20 / 100))
-    fallocate -l "${size}K" /var/dumb/dumbfile
-  args:
-    executable: /bin/bash
-  when: not dumbfile_stat.stat.exists
-
-- name: Check if reboot is required
-  ansible.builtin.stat:
-    path: /var/run/reboot-required
-  register: reboot_required_file
-
-- name: Reboot the box if kernel updated
-  ansible.builtin.reboot:
-    msg: "Reboot initiated by Ansible for kernel updates"
-    connect_timeout: 5
-    reboot_timeout: 300
-    pre_reboot_delay: 0
-    post_reboot_delay: 30
-    test_command: uptime
-  when: reboot_required_file.stat.exists
+- ansible.builtin.include_tasks: timezone_locales.yml
+- ansible.builtin.include_tasks: sysctl.yml
+- ansible.builtin.include_tasks: packages.yml
+- ansible.builtin.include_tasks: maintenance.yml
+- ansible.builtin.include_tasks: dumbfile.yml
+- ansible.builtin.include_tasks: reboot.yml
