--- a/roles/server_general_preparations/tasks/sysctl.yml
+++ b/roles/server_general_preparations/tasks/sysctl.yml
@@ -6,6 +6,7 @@
     reload: yes
   loop: "{{ sysctl_values_absent }}"
 
+# move to /etc/sysctl.d/ansible file
 - name: Apply custom sysctl values
   ansible.posix.sysctl:
     name: "{{ item.key }}"
