feat(docker): connect services to 'web' network
Connects various Docker services to the 'web' network for improved inter-service communication and management. This change also introduces the creation of the 'web' and 'nextcloud-aio' Docker networks.

- Added 'web' network to blocky, gitea, hemmelig, mayurifag_github_io, mus, netdata, obsidian_livesync, portainer, threexui, tinyauth, and vaultwarden service configurations.
- Created the 'web' Docker network in provisioning.yml.
- Created the 'nextcloud-aio' Docker network in provisioning.yml.
- Updated Traefik container to use the 'web' and 'nextcloud-aio' networks.
- Removed 'tinyauth' from the README.md task list.
- Removed 'tinyauth' from the provisioning.yml role list.
- Disabled watch for docker provider in traefik.toml.j2.
- Added volume mount for / to netdata container.
- Added telemetry disabling environment variables to netdata container.
- Commented out security_opts for mus container.

--- a/roles/blocky/tasks/main.yml
+++ b/roles/blocky/tasks/main.yml
@@ -55,6 +55,8 @@
     env:
       TZ: "{{ server_timezone }}"
     restart_policy: unless-stopped
+    networks:
+      - name: "web"
     ports:
       # - "53:53" # Do not expose 53 port, its open for DNS Amplification Attack
       - "853:853"
