--- a/roles/threexui/tasks/main.yml
+++ b/roles/threexui/tasks/main.yml
@@ -24,6 +24,8 @@
     restart_policy: unless-stopped
     memory: "{{ threexui_memory }}"
     tty: true
+    networks:
+      - name: "web"
     labels:
       # Admin panel routing
       traefik.enable: "true"
