--- a/roles/vaultwarden/tasks/main.yml
+++ b/roles/vaultwarden/tasks/main.yml
@@ -14,6 +14,8 @@
     volumes:
       - "{{ vaultwarden_data_directory }}/:/data/"
     restart_policy: unless-stopped
+    networks:
+      - name: "web"
     labels:
       traefik.enable: "{{ vaultwarden_available_externally }}"
       traefik.http.routers.vaultwarden.rule: "Host(`{{ vaultwarden_subdomain }}.{{ server_hostname }}`)"
