style(ansible): improve task naming and formatting
Improved the readability and consistency of Ansible tasks within the server_general_preparations and tinyauth roles.

- Added descriptive names to included tasks in server_general_preparations/tasks/main.yml for clarity.
- Ensured consistent newline formatting in several task files to prevent potential issues.
- Renamed the "tinyauth Docker Container" task to "Tinyauth Docker Container" for consistent capitalization.

--- a/roles/server_general_preparations/tasks/main.yml
+++ b/roles/server_general_preparations/tasks/main.yml
@@ -1,7 +1,18 @@
 ---
-- ansible.builtin.include_tasks: timezone_locales.yml
-- ansible.builtin.include_tasks: sysctl.yml
-- ansible.builtin.include_tasks: packages.yml
-- ansible.builtin.include_tasks: maintenance.yml
-- ansible.builtin.include_tasks: dumbfile.yml
-- ansible.builtin.include_tasks: reboot.yml
+- name: Include timezone and locales tasks
+  ansible.builtin.include_tasks: timezone_locales.yml
+
+- name: Include sysctl configuration tasks
+  ansible.builtin.include_tasks: sysctl.yml
+
+- name: Include package installation tasks
+  ansible.builtin.include_tasks: packages.yml
+
+- name: Include maintenance tasks
+  ansible.builtin.include_tasks: maintenance.yml
+
+- name: Include dumbfile tasks
+  ansible.builtin.include_tasks: dumbfile.yml
+
+- name: Include reboot tasks
+  ansible.builtin.include_tasks: reboot.yml
